--- a/Tools/home.html
+++ b/Tools/home.html
@@ -8,22 +8,21 @@
 </head>
 <body>
     <div class="container">
-        <div class="circles">
-            <button id="menu">Menu</button>
-                <div class="contents">
-                    <button id="calc">Calculator</button>
-                    <button id="tour">Tourney</button>
-                    <button>Currency</button>
-                    <button>Timer</button>
-                    <button>LiveClock</button>
-                    <button>Weather</button>
-                </div>
+        <div id="menu">
+            <button>Menu</button>
         </div>
 
-
-
-
-
+        <button id="calc">Calculator</button>
+        <button id="currency">Currency Converter</button>
+        <button id="weather">Weather App</button>
+        <button id="clock">Live Clock</button>
+        <button id="tour">Tourney</button>
+        <button id="timer">Timer</button>
     </div>
+
+
+
+
+
 </body>
 </html>
