--- a/Tools/home.html
+++ b/Tools/home.html
@@ -11,7 +11,6 @@
         <div id="menu">
             <button>Menu</button>
         </div>
-
         <button id="calc">Calculator</button>
         <button id="currency">Currency Converter</button>
         <button id="weather">Weather App</button>
@@ -25,4 +24,5 @@
 
 
 </body>
+    <script src="./index.js"></script>
 </html>
