--- a/Tools/home.html
+++ b/Tools/home.html
@@ -3,11 +3,26 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Tools</title>
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-    <div class="container">
+    <div class="navbar">
+        <div class="logo">
+            <img src="./daily tools logo.png" alt="Daily Tools Logo" height="50px">
+        </div>
+
+        <div class="contents">
+            <ul>
+                <li><a href="#">Home</a></li>
+                <li><a href="#">Contents</a></li>
+                <li><a href="#">Theme</a></li>
+                <li><a href="#">Contact me</a></li>
+            </ul>
+        </div>
+    </div>
+
+<!--    <div class="container">
         <div id="menu">
             <button>Menu</button>
         </div>
@@ -19,7 +34,7 @@
         <button id="timer">Timer</button>
     </div>
 
-
+-->
 
 
 
