--- a/Tools/home.html
+++ b/Tools/home.html
@@ -6,6 +6,7 @@
     <title>Tools</title>
     <link rel="stylesheet" href="./style.css">
 </head>
+
 <body>
     <div class="navbar">
         <div class="logo">
@@ -19,22 +20,27 @@
                 <li><a href="#">Theme</a></li>
                 <li><a href="#">Contact me</a></li>
             </ul>
+            <div class="items">
+                <ul>
+                    <li><a href="#"></a></li>
+                </ul>
+            </div>
         </div>
     </div>
 
-<!--    <div class="container">
+<div class="container">
         <div id="menu">
-            <button>Menu</button>
+            <button id="menubtn">Menu</button>
         </div>
         <button id="calc">Calculator</button>
-        <button id="currency">Currency Converter</button>
-        <button id="weather">Weather App</button>
-        <button id="clock">Live Clock</button>
+        <button id="currency">Converter</button>
+        <button id="weather">Weather</button>
+        <button id="clock">Clock</button>
         <button id="tour">Tourney</button>
         <button id="timer">Timer</button>
     </div>
 
--->
+
 
 
 
