--- a/Tools/home.html
+++ b/Tools/home.html
@@ -10,35 +10,72 @@
 <body>
     <div class="navbar">
         <div class="logo">
-            <img src="./daily tools logo.png" alt="Daily Tools Logo" height="50px">
+            <img src="./pics/KnowYourCarsLogo.png" alt="Daily Tools Logo" height="30px">
         </div>
 
         <div class="contents">
             <ul>
                 <li><a href="#">Home</a></li>
                 <li><a href="#">Contents</a></li>
-                <li><a href="#">Theme</a></li>
+                <li><a href="#">Top Five</a></li>
                 <li><a href="#">Contact me</a></li>
             </ul>
-            <div class="items">
-                <ul>
-                    <li><a href="#"></a></li>
-                </ul>
-            </div>
+        </div>
+        <div class="items">
+            <ul>
+                <li><a href="#"></a>Calculator</li>
+                <li><a href="#"></a>Converter</li>
+                <li><a href="#"></a>Weather</li>
+                <li><a href="#"></a>Clock</li>
+                <li><a href="#"></a>Tourney</li>
+                <li><a href="#"></a>Timer</li>
+            </ul>
         </div>
     </div>
 
-<div class="container">
-        <div id="menu">
-            <button id="menubtn">Menu</button>
+
+
+    <div class="container">
+        <div id="cars">
+            <button id="carsbtn">Cars</button>
         </div>
-        <button id="calc">Calculator</button>
-        <button id="currency">Converter</button>
-        <button id="weather">Weather</button>
-        <button id="clock">Clock</button>
-        <button id="tour">Tourney</button>
-        <button id="timer">Timer</button>
+        <button id="conver">Convertible</button>
+        <button id="muscle">Muscle</button>
+        <button id="electric">Electric</button>
+        <button id="sedan">Sedan</button>
+        <button id="suv">SUV</button>
+        <button id="sports">Sports</button>
     </div>
+
+    <div class="about-cars">
+        <h1>About Cars</h1>
+        <p>
+            &emsp;&emsp;&emsp;&emsp; When it comes to choosing the perfect car, there are a variety of options to consider. From the sleek and stylish Convertible, perfect for enjoying the open road on a sunny day, to the powerful and iconic Muscle cars that exude strength and speed. For those who crave adrenaline, Sports cars offer a thrilling driving experience with their agility and performance. On the other hand, Sedans provide comfort and practicality for everyday use, while SUVs offer versatility and space for both passengers and cargo. And in the age of sustainability, Electric cars are becoming increasingly popular for their eco-friendly design and efficiency. No matter your preference, there is a type of car to suit every lifestyle and need.
+        </p>
+    </div>
+
+    <div class="about-sports">
+        <h1>Sports Cars</h1>
+        <h2>Sports cars are known for their sleek designs and high performance capabilities</h2>
+        <div class="cars-sports">
+            <div class="corvette">
+                <img src="./pics/corvette.jpg" alt="Corvette pic" height="200px">
+                <p>Chevrolet Corvette</p>
+            </div>
+            <div class="r35">
+                <img src="./pics/R35 GTR.jpg" alt="Corvette pic" height="200px">
+                <p>Nissan R35 GT-R</p>
+            </div>
+            <div class="supra">
+                <img src="./pics/supra.jpg" alt="Corvette pic" height="200px">
+                <p>Toyota Supra</p>
+            </div>
+        </div>
+
+
+
+    </div>
+
 
 
 
