--- a/Tools/home.html
+++ b/Tools/home.html
@@ -10,7 +10,7 @@
 <body>
     <div class="navbar">
         <div class="logo">
-            <img src="./pics/KnowYourCarsLogo.png" alt="Daily Tools Logo" height="30px">
+            <img src="./pics/Logo/KnowYourCarsLogo.png" alt="Daily Tools Logo" height="30px">
         </div>
 
         <div class="contents">
@@ -54,26 +54,24 @@
         </p>
     </div>
 
-    <div class="about-sports">
+    <div class="about-allcars">
         <h1>Sports Cars</h1>
-        <h2>Sports cars are known for their sleek designs and high performance capabilities</h2>
-        <div class="cars-sports">
+        <p>Sports cars are known for their sleek designs and high performance capabilities</p>
+        <div class="cars-info">
             <div class="corvette">
-                <img src="./pics/corvette.jpg" alt="Corvette pic" height="200px">
+                <img src="./pics/Sports/corvette.jpg" alt="Corvette pic" height="200px">
                 <p>Chevrolet Corvette</p>
             </div>
-            <div class="r35">
-                <img src="./pics/R35 GTR.jpg" alt="Corvette pic" height="200px">
+            <div class="corvette">
+                <img src="./pics/Sports/R35 GTR.jpg" alt="Corvette pic" height="200px">
                 <p>Nissan R35 GT-R</p>
             </div>
-            <div class="supra">
-                <img src="./pics/supra.jpg" alt="Corvette pic" height="200px">
+            <div class="corvette">
+                <img src="./pics/Sports/supra.jpg" alt="Corvette pic" height="200px">
                 <p>Toyota Supra</p>
             </div>
         </div>
-
-
-
+        <button>About Sports Cars</button>
     </div>
 
 
