--- a/Tools/home.html
+++ b/Tools/home.html
@@ -8,6 +8,9 @@
 </head>
 
 <body>
+
+    <!-- NAVBAR -->
+
     <div class="navbar">
         <div class="logo">
             <img src="./pics/Logo/KnowYourCarsLogo.png" alt="Daily Tools Logo" height="30px">
@@ -33,9 +36,9 @@
         </div>
     </div>
 
+    <!-- MAIN MENU -->
 
-
-    <div class="container">
+    <div class="container section">
         <div id="cars">
             <button id="carsbtn">Cars</button>
         </div>
@@ -47,31 +50,145 @@
         <button id="sports">Sports</button>
     </div>
 
-    <div class="about-cars">
+    <!-- ABOUT CARS -->
+
+    <div class="about-cars section">
         <h1>About Cars</h1>
         <p>
             &emsp;&emsp;&emsp;&emsp; When it comes to choosing the perfect car, there are a variety of options to consider. From the sleek and stylish Convertible, perfect for enjoying the open road on a sunny day, to the powerful and iconic Muscle cars that exude strength and speed. For those who crave adrenaline, Sports cars offer a thrilling driving experience with their agility and performance. On the other hand, Sedans provide comfort and practicality for everyday use, while SUVs offer versatility and space for both passengers and cargo. And in the age of sustainability, Electric cars are becoming increasingly popular for their eco-friendly design and efficiency. No matter your preference, there is a type of car to suit every lifestyle and need.
         </p>
     </div>
 
-    <div class="about-allcars">
+    <!-- SPORTS CARS -->
+
+    <div class="about-allcars section">
         <h1>Sports Cars</h1>
         <p>Sports cars are known for their sleek designs and high performance capabilities</p>
         <div class="cars-info">
-            <div class="corvette">
+            <div class="cars-card">
                 <img src="./pics/Sports/corvette.jpg" alt="Corvette pic" height="200px">
                 <p>Chevrolet Corvette</p>
             </div>
-            <div class="corvette">
+            <div class="cars-card">
                 <img src="./pics/Sports/R35 GTR.jpg" alt="Corvette pic" height="200px">
                 <p>Nissan R35 GT-R</p>
             </div>
-            <div class="corvette">
+            <div class="cars-card">
                 <img src="./pics/Sports/supra.jpg" alt="Corvette pic" height="200px">
                 <p>Toyota Supra</p>
             </div>
         </div>
         <button>About Sports Cars</button>
+    </div>
+
+    <!-- ELECTRIC CARS -->
+
+    <div class="about-allcars section electric-bg">
+        <h1>Electric Cars</h1>
+        <p>Electric cars are paving the way towards a sustainable and eco-friendly future, revolutionizing the automotive industry with their clean energy technology</p>
+        <div class="cars-info">
+            <div class="cars-card">
+                <img src="./pics/Sports/corvette.jpg" alt="Corvette pic" height="200px">
+                <p>Chevrolet Corvette</p>
+            </div>
+            <div class="cars-card">
+                <img src="./pics/Sports/R35 GTR.jpg" alt="Corvette pic" height="200px">
+                <p>Nissan R35 GT-R</p>
+            </div>
+            <div class="cars-card">
+                <img src="./pics/Sports/supra.jpg" alt="Corvette pic" height="200px">
+                <p>Toyota Supra</p>
+            </div>
+        </div>
+        <button>About Electric Cars</button>
+    </div>
+
+    <!-- MUSCLE CARS -->
+
+    <div class="about-allcars section muscle-bg">
+        <h1>Muscle Cars</h1>
+        <p>Muscle cars embody raw power and nostalgia, roaring down the road with their iconic designs and high-performance engines</p>
+        <div class="cars-info">
+            <div class="cars-card">
+                <img src="./pics/Sports/corvette.jpg" alt="Corvette pic" height="200px">
+                <p>Chevrolet Corvette</p>
+            </div>
+            <div class="cars-card">
+                <img src="./pics/Sports/R35 GTR.jpg" alt="Corvette pic" height="200px">
+                <p>Nissan R35 GT-R</p>
+            </div>
+            <div class="cars-card">
+                <img src="./pics/Sports/supra.jpg" alt="Corvette pic" height="200px">
+                <p>Toyota Supra</p>
+            </div>
+        </div>
+        <button>About Muscle Cars</button>
+    </div>
+
+    <!-- CONVERTIBLE CARS -->
+
+    <div class="about-allcars section convertible-bg">
+        <h1>Convertible Cars</h1>
+        <p>Convertible cars provide a fun and open-air driving experience, perfect for enjoying sunny days and scenic drives</p>
+        <div class="cars-info">
+            <div class="cars-card">
+                <img src="./pics/Sports/corvette.jpg" alt="Corvette pic" height="200px">
+                <p>Chevrolet Corvette</p>
+            </div>
+            <div class="cars-card">
+                <img src="./pics/Sports/R35 GTR.jpg" alt="Corvette pic" height="200px">
+                <p>Nissan R35 GT-R</p>
+            </div>
+            <div class="cars-card">
+                <img src="./pics/Sports/supra.jpg" alt="Corvette pic" height="200px">
+                <p>Toyota Supra</p>
+            </div>
+        </div>
+        <button>About Convertibles</button>
+    </div>
+
+    <!-- SEDAN CARS -->
+
+    <div class="about-allcars section sedan-bg">
+        <h1>Sedan Cars</h1>
+        <p>Sedan cars offer a perfect blend of style, comfort, and practicality, making them a popular choice for everyday driving</p>
+        <div class="cars-info">
+            <div class="cars-card">
+                <img src="./pics/Sports/corvette.jpg" alt="Corvette pic" height="200px">
+                <p>Chevrolet Corvette</p>
+            </div>
+            <div class="cars-card">
+                <img src="./pics/Sports/R35 GTR.jpg" alt="Corvette pic" height="200px">
+                <p>Nissan R35 GT-R</p>
+            </div>
+            <div class="cars-card">
+                <img src="./pics/Sports/supra.jpg" alt="Corvette pic" height="200px">
+                <p>Toyota Supra</p>
+            </div>
+        </div>
+        <button>About Sedan Cars</button>
+    </div>
+
+    <!-- SUV CARS -->
+
+    <div class="about-allcars section suv-bg">
+        <h1>SUV Cars</h1>
+        <p>SUVs are versatile vehicles with spacious interiors and rugged capabilities, perfect for city commutes and off-road adventures</p>
+        <div class="cars-info">
+            <div class="cars-card">
+                <img src="./pics/Sports/corvette.jpg" alt="Corvette pic" height="200px">
+                <p>Chevrolet Corvette</p>
+            </div>
+            <div class="cars-card">
+                <img src="./pics/Sports/R35 GTR.jpg" alt="Corvette pic" height="200px">
+                <p>Nissan R35 GT-R</p>
+            </div>
+            <div class="cars-card">
+                <img src="./pics/Sports/supra.jpg" alt="Corvette pic" height="200px">
+                <p>Toyota Supra</p>
+            </div>
+        </div>
+        <button>About SUV Cars</button>
     </div>
 
 
