--- a/Tools/home.html
+++ b/Tools/home.html
@@ -47,7 +47,7 @@
         <button id="electric">Electric</button>
         <button id="sedan">Sedan</button>
         <button id="suv">SUV</button>
-        <button id="sports">Sports</button>
+        <button id="sports" onmouseover="testy()">Sports</button>
     </div>
 
     <!-- ABOUT CARS -->
@@ -88,16 +88,16 @@
         <p>Electric cars are paving the way towards a sustainable and eco-friendly future, revolutionizing the automotive industry with their clean energy technology</p>
         <div class="cars-info">
             <div class="cars-card">
-                <img src="./pics/Sports/corvette.jpg" alt="Corvette pic" height="200px">
-                <p>Chevrolet Corvette</p>
+                <img src="./pics/Electric/KIA EV6.jpg" alt="KIA EV6 pic" height="200px">
+                <p>KIA EV6</p>
             </div>
             <div class="cars-card">
-                <img src="./pics/Sports/R35 GTR.jpg" alt="Corvette pic" height="200px">
-                <p>Nissan R35 GT-R</p>
+                <img src="./pics/Electric/Tesla Model S.jpg" alt="Tesla Model S pic" height="200px">
+                <p>Tesla Model S</p>
             </div>
             <div class="cars-card">
-                <img src="./pics/Sports/supra.jpg" alt="Corvette pic" height="200px">
-                <p>Toyota Supra</p>
+                <img src="./pics/Electric/Volvo C40.jpg" alt="Volvo C40 pic" height="200px">
+                <p>Vovlo C40</p>
             </div>
         </div>
         <button>About Electric Cars</button>
@@ -110,16 +110,16 @@
         <p>Muscle cars embody raw power and nostalgia, roaring down the road with their iconic designs and high-performance engines</p>
         <div class="cars-info">
             <div class="cars-card">
-                <img src="./pics/Sports/corvette.jpg" alt="Corvette pic" height="200px">
-                <p>Chevrolet Corvette</p>
+                <img src="./pics/Muscle/Dodge.jpg" alt="Dodge pic" height="200px">
+                <p>Dodge</p>
             </div>
             <div class="cars-card">
-                <img src="./pics/Sports/R35 GTR.jpg" alt="Corvette pic" height="200px">
-                <p>Nissan R35 GT-R</p>
+                <img src="./pics/Muscle/Mustang.jpg" alt="Mustang pic" height="200px">
+                <p>Ford Mustang</p>
             </div>
             <div class="cars-card">
-                <img src="./pics/Sports/supra.jpg" alt="Corvette pic" height="200px">
-                <p>Toyota Supra</p>
+                <img src="./pics/Muscle/Thunder bird.jpg" alt="Thunder Bird pic" height="200px">
+                <p>Thunder Bird</p>
             </div>
         </div>
         <button>About Muscle Cars</button>
@@ -132,16 +132,16 @@
         <p>Convertible cars provide a fun and open-air driving experience, perfect for enjoying sunny days and scenic drives</p>
         <div class="cars-info">
             <div class="cars-card">
-                <img src="./pics/Sports/corvette.jpg" alt="Corvette pic" height="200px">
-                <p>Chevrolet Corvette</p>
+                <img src="./pics/Convertible/Audi A5.jpg" alt="Audi A5 pic" height="200px">
+                <p>Audi A5</p>
             </div>
             <div class="cars-card">
-                <img src="./pics/Sports/R35 GTR.jpg" alt="Corvette pic" height="200px">
-                <p>Nissan R35 GT-R</p>
+                <img src="./pics/Convertible/BMW 4.jpg" alt="BMW 4 pic" height="200px">
+                <p>BMW 4 Series</p>
             </div>
             <div class="cars-card">
-                <img src="./pics/Sports/supra.jpg" alt="Corvette pic" height="200px">
-                <p>Toyota Supra</p>
+                <img src="./pics/Convertible/Camaro.jpg" alt="Camaro pic" height="200px">
+                <p>Camaro</p>
             </div>
         </div>
         <button>About Convertibles</button>
@@ -154,16 +154,16 @@
         <p>Sedan cars offer a perfect blend of style, comfort, and practicality, making them a popular choice for everyday driving</p>
         <div class="cars-info">
             <div class="cars-card">
-                <img src="./pics/Sports/corvette.jpg" alt="Corvette pic" height="200px">
-                <p>Chevrolet Corvette</p>
+                <img src="./pics/Sedan/Audi A4.jpg" alt="Audi A4 pic" height="200px">
+                <p>Audi A4</p>
             </div>
             <div class="cars-card">
-                <img src="./pics/Sports/R35 GTR.jpg" alt="Corvette pic" height="200px">
-                <p>Nissan R35 GT-R</p>
+                <img src="./pics/Sedan/Benz C-Class.jpg" alt="Benz C pic" height="200px">
+                <p>Benz C-Class</p>
             </div>
             <div class="cars-card">
-                <img src="./pics/Sports/supra.jpg" alt="Corvette pic" height="200px">
-                <p>Toyota Supra</p>
+                <img src="./pics/Sedan/BMW 7 Series.jpg" alt="BMW 7 pic" height="200px">
+                <p>BMW 7 Series</p>
             </div>
         </div>
         <button>About Sedan Cars</button>
@@ -176,16 +176,16 @@
         <p>SUVs are versatile vehicles with spacious interiors and rugged capabilities, perfect for city commutes and off-road adventures</p>
         <div class="cars-info">
             <div class="cars-card">
-                <img src="./pics/Sports/corvette.jpg" alt="Corvette pic" height="200px">
-                <p>Chevrolet Corvette</p>
+                <img src="./pics/SUV/Cadillac Escalade.jpg" alt="Cadillac pic" height="200px">
+                <p>Cadillac Escalade</p>
             </div>
             <div class="cars-card">
-                <img src="./pics/Sports/R35 GTR.jpg" alt="Corvette pic" height="200px">
-                <p>Nissan R35 GT-R</p>
+                <img src="./pics/SUV/Chevrolet Blazer.jpg" alt="Blazer pic" height="200px">
+                <p>Chevrolet Blazer</p>
             </div>
             <div class="cars-card">
-                <img src="./pics/Sports/supra.jpg" alt="Corvette pic" height="200px">
-                <p>Toyota Supra</p>
+                <img src="./pics/SUV/Toyota Sequoia.jpg" alt="Sequoia pic" height="200px">
+                <p>Toyota Sequoia</p>
             </div>
         </div>
         <button>About SUV Cars</button>
