--- a/Tools/home.html
+++ b/Tools/home.html
@@ -19,9 +19,9 @@
         <div class="contents">
             <ul>
                 <li><a href="#">Home</a></li>
-                <li><a href="#">Contents</a></li>
+                <li><a href="#">Cars</a></li>
                 <li><a href="#">Top Five</a></li>
-                <li><a href="#">Contact me</a></li>
+                <li><a href="#">Contact</a></li>
             </ul>
         </div>
         <div class="items">
@@ -47,7 +47,10 @@
         <button id="electric">Electric</button>
         <button id="sedan">Sedan</button>
         <button id="suv">SUV</button>
-        <button id="sports" onmouseover="testy()">Sports</button>
+        <button id="sports">Sports</button>
+        <div id="top"></div>
+        <div id="mid"></div>
+        <div id="below"></div>
     </div>
 
     <!-- ABOUT CARS -->
@@ -61,7 +64,7 @@
 
     <!-- SPORTS CARS -->
 
-    <div class="about-allcars section">
+    <div class="about-allcars section" id="sc">
         <h1>Sports Cars</h1>
         <p>Sports cars are known for their sleek designs and high performance capabilities</p>
         <div class="cars-info">
