--- a/Tools/home.html
+++ b/Tools/home.html
@@ -42,12 +42,12 @@
         <div id="cars">
             <button id="carsbtn">Cars</button>
         </div>
-        <button id="conver">Convertible</button>
-        <button id="muscle">Muscle</button>
-        <button id="electric">Electric</button>
-        <button id="sedan">Sedan</button>
-        <button id="suv">SUV</button>
-        <button id="sports">Sports</button>
+        <a href="#convey"><button id="conver">Convertible</button></a>
+        <a href="#muscly"><button id="muscle">Muscle</button></a>
+        <a href="#electy"><button id="electric">Electric</button></a>
+        <a href="#sedy"><button id="sedan">Sedan</button></a>
+        <a href="#sui"><button id="suv">SUV</button></a>
+        <a href="#sporty"><button id="sports">Sports</button></a>
         <div id="top"></div>
         <div id="mid"></div>
         <div id="below"></div>
@@ -64,7 +64,7 @@
 
     <!-- SPORTS CARS -->
 
-    <div class="about-allcars section" id="sc">
+    <div class="about-allcars section" id="sporty">
         <h1>Sports Cars</h1>
         <p>Sports cars are known for their sleek designs and high performance capabilities</p>
         <div class="cars-info">
@@ -86,7 +86,7 @@
 
     <!-- ELECTRIC CARS -->
 
-    <div class="about-allcars section electric-bg">
+    <div class="about-allcars section electric-bg" id="electy">
         <h1>Electric Cars</h1>
         <p>Electric cars are paving the way towards a sustainable and eco-friendly future, revolutionizing the automotive industry with their clean energy technology</p>
         <div class="cars-info">
@@ -108,7 +108,7 @@
 
     <!-- MUSCLE CARS -->
 
-    <div class="about-allcars section muscle-bg">
+    <div class="about-allcars section muscle-bg" id="muscly">
         <h1>Muscle Cars</h1>
         <p>Muscle cars embody raw power and nostalgia, roaring down the road with their iconic designs and high-performance engines</p>
         <div class="cars-info">
@@ -130,7 +130,7 @@
 
     <!-- CONVERTIBLE CARS -->
 
-    <div class="about-allcars section convertible-bg">
+    <div class="about-allcars section convertible-bg" id="convey">
         <h1>Convertible Cars</h1>
         <p>Convertible cars provide a fun and open-air driving experience, perfect for enjoying sunny days and scenic drives</p>
         <div class="cars-info">
@@ -152,7 +152,7 @@
 
     <!-- SEDAN CARS -->
 
-    <div class="about-allcars section sedan-bg">
+    <div class="about-allcars section sedan-bg" id="sedy">
         <h1>Sedan Cars</h1>
         <p>Sedan cars offer a perfect blend of style, comfort, and practicality, making them a popular choice for everyday driving</p>
         <div class="cars-info">
@@ -174,7 +174,7 @@
 
     <!-- SUV CARS -->
 
-    <div class="about-allcars section suv-bg">
+    <div class="about-allcars section suv-bg" id="sui">
         <h1>SUV Cars</h1>
         <p>SUVs are versatile vehicles with spacious interiors and rugged capabilities, perfect for city commutes and off-road adventures</p>
         <div class="cars-info">
