--- a/Tools/home.html
+++ b/Tools/home.html
@@ -68,7 +68,7 @@
         <h1>Sports Cars</h1>
         <p>Sports cars are known for their sleek designs and high performance capabilities</p>
         <div class="cars-info">
-            <div class="cars-card">
+            <div class="cars-card" id="corvette-bg">
                 <img src="./pics/Sports/corvette.jpg" alt="Corvette pic" height="200px">
                 <p>Chevrolet Corvette</p>
             </div>
@@ -194,6 +194,9 @@
         <button>About SUV Cars</button>
     </div>
 
+    <div class="footer section">
+        <h1>yeah</h1>
+    </div>
 
 
 
