--- a/Tools/home.html
+++ b/Tools/home.html
@@ -19,20 +19,18 @@
         <div class="contents">
             <ul>
                 <li><a href="#">Home</a></li>
-                <li><a href="#">Cars</a></li>
+                <li><a id="navCartypes">Car Types</a></li>
                 <li><a href="#">Top Five</a></li>
-                <li><a href="#">Contact</a></li>
+                <li><a href="#footy">Contact</a></li>
             </ul>
         </div>
-        <div class="items">
-            <ul>
-                <li><a href="#"></a>Calculator</li>
-                <li><a href="#"></a>Converter</li>
-                <li><a href="#"></a>Weather</li>
-                <li><a href="#"></a>Clock</li>
-                <li><a href="#"></a>Tourney</li>
-                <li><a href="#"></a>Timer</li>
-            </ul>
+        <div id="cartypes">
+                <a href="#sporty">Sports</a>
+                <a href="#electy">Electric</a>
+                <a href="#muscly">Muscle</a>
+                <a href="#convey">Convertible</a>
+                <a href="#sedy">Sedan</a>
+                <a href="#sui">SUV</a>
         </div>
     </div>
 
@@ -63,20 +61,19 @@
     </div>
 
     <!-- SPORTS CARS -->
-
     <div class="about-allcars section" id="sporty">
         <h1>Sports Cars</h1>
         <p>Sports cars are known for their sleek designs and high performance capabilities</p>
         <div class="cars-info">
-            <div class="cars-card" id="corvette-bg">
+            <div class="cars-card" id="corvette">
                 <img src="./pics/Sports/corvette.jpg" alt="Corvette pic" height="200px">
                 <p>Chevrolet Corvette</p>
             </div>
-            <div class="cars-card">
+            <div class="cars-card" id="r35">
                 <img src="./pics/Sports/R35 GTR.jpg" alt="Corvette pic" height="200px">
                 <p>Nissan R35 GT-R</p>
             </div>
-            <div class="cars-card">
+            <div class="cars-card" id="supra">
                 <img src="./pics/Sports/supra.jpg" alt="Corvette pic" height="200px">
                 <p>Toyota Supra</p>
             </div>
@@ -90,15 +87,15 @@
         <h1>Electric Cars</h1>
         <p>Electric cars are paving the way towards a sustainable and eco-friendly future, revolutionizing the automotive industry with their clean energy technology</p>
         <div class="cars-info">
-            <div class="cars-card">
+            <div class="cars-card" id="ev6">
                 <img src="./pics/Electric/KIA EV6.jpg" alt="KIA EV6 pic" height="200px">
                 <p>KIA EV6</p>
             </div>
-            <div class="cars-card">
+            <div class="cars-card" id="models">
                 <img src="./pics/Electric/Tesla Model S.jpg" alt="Tesla Model S pic" height="200px">
                 <p>Tesla Model S</p>
             </div>
-            <div class="cars-card">
+            <div class="cars-card" id="c40">
                 <img src="./pics/Electric/Volvo C40.jpg" alt="Volvo C40 pic" height="200px">
                 <p>Vovlo C40</p>
             </div>
@@ -112,15 +109,15 @@
         <h1>Muscle Cars</h1>
         <p>Muscle cars embody raw power and nostalgia, roaring down the road with their iconic designs and high-performance engines</p>
         <div class="cars-info">
-            <div class="cars-card">
+            <div class="cars-card" id="dodge">
                 <img src="./pics/Muscle/Dodge.jpg" alt="Dodge pic" height="200px">
                 <p>Dodge</p>
             </div>
-            <div class="cars-card">
+            <div class="cars-card" id="mustang">
                 <img src="./pics/Muscle/Mustang.jpg" alt="Mustang pic" height="200px">
                 <p>Ford Mustang</p>
             </div>
-            <div class="cars-card">
+            <div class="cars-card" id="thunder">
                 <img src="./pics/Muscle/Thunder bird.jpg" alt="Thunder Bird pic" height="200px">
                 <p>Thunder Bird</p>
             </div>
@@ -134,15 +131,15 @@
         <h1>Convertible Cars</h1>
         <p>Convertible cars provide a fun and open-air driving experience, perfect for enjoying sunny days and scenic drives</p>
         <div class="cars-info">
-            <div class="cars-card">
+            <div class="cars-card" id="a5">
                 <img src="./pics/Convertible/Audi A5.jpg" alt="Audi A5 pic" height="200px">
                 <p>Audi A5</p>
             </div>
-            <div class="cars-card">
+            <div class="cars-card" id="bmw4">
                 <img src="./pics/Convertible/BMW 4.jpg" alt="BMW 4 pic" height="200px">
                 <p>BMW 4 Series</p>
             </div>
-            <div class="cars-card">
+            <div class="cars-card" id="camaro">
                 <img src="./pics/Convertible/Camaro.jpg" alt="Camaro pic" height="200px">
                 <p>Camaro</p>
             </div>
@@ -156,15 +153,15 @@
         <h1>Sedan Cars</h1>
         <p>Sedan cars offer a perfect blend of style, comfort, and practicality, making them a popular choice for everyday driving</p>
         <div class="cars-info">
-            <div class="cars-card">
+            <div class="cars-card" id="a4">
                 <img src="./pics/Sedan/Audi A4.jpg" alt="Audi A4 pic" height="200px">
                 <p>Audi A4</p>
             </div>
-            <div class="cars-card">
+            <div class="cars-card" id="benzc">
                 <img src="./pics/Sedan/Benz C-Class.jpg" alt="Benz C pic" height="200px">
                 <p>Benz C-Class</p>
             </div>
-            <div class="cars-card">
+            <div class="cars-card" id="bmw7">
                 <img src="./pics/Sedan/BMW 7 Series.jpg" alt="BMW 7 pic" height="200px">
                 <p>BMW 7 Series</p>
             </div>
@@ -178,15 +175,15 @@
         <h1>SUV Cars</h1>
         <p>SUVs are versatile vehicles with spacious interiors and rugged capabilities, perfect for city commutes and off-road adventures</p>
         <div class="cars-info">
-            <div class="cars-card">
+            <div class="cars-card" id="escalade">
                 <img src="./pics/SUV/Cadillac Escalade.jpg" alt="Cadillac pic" height="200px">
                 <p>Cadillac Escalade</p>
             </div>
-            <div class="cars-card">
+            <div class="cars-card" id="blazer">
                 <img src="./pics/SUV/Chevrolet Blazer.jpg" alt="Blazer pic" height="200px">
                 <p>Chevrolet Blazer</p>
             </div>
-            <div class="cars-card">
+            <div class="cars-card" id="sequoia">
                 <img src="./pics/SUV/Toyota Sequoia.jpg" alt="Sequoia pic" height="200px">
                 <p>Toyota Sequoia</p>
             </div>
@@ -194,8 +191,10 @@
         <button>About SUV Cars</button>
     </div>
 
-    <div class="footer section">
-        <h1>yeah</h1>
+    <div class="footer section" id="footy">
+        <div class="description">
+
+        </div>
     </div>
 
 
