--- a/Tools/home.html
+++ b/Tools/home.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tools</title>
+    <title>KnowYourCars</title>
     <link rel="stylesheet" href="./style.css">
 </head>
 
@@ -78,7 +78,7 @@
                 <p>Toyota Supra</p>
             </div>
         </div>
-        <button>About Sports Cars</button>
+        <a href="./Sports.html"><button>About Sports Cars</button></a>
     </div>
 
     <!-- ELECTRIC CARS -->
