--- a/Tools/Sports.html
+++ b/Tools/Sports.html
@@ -40,4 +40,59 @@
         <h1>SPORTS CARS</h1>
         <p>Where sleek design meets thrilling performance, delivering an unmatched driving experience. With agile handling and powerful engines, they ignite the senses and command the road with finesse. Representing automotive excellence, they embody speed, style, and sheer driving pleasure.</p>
     </div>
+
+    <div class="specifications">
+        <div class="specs">
+            <h3>Average cost</h3>
+            <p>$25,000 - $200,200+</p>
+        </div>
+        <div class="specs">
+            <h3>Average HP</h3>
+            <p>200 - 700+</p>
+        </div>
+        <div class="specs">
+            <h3>Design</h3>
+            <p>Sleek, Aerodynamic, Aggressive</p>
+        </div>
+        <div class="specs">
+            <h3>Technology</h3>
+            <p>Driver aids, Connectivity</p>
+        </div>
+        <div class="specs">
+            <h3>Handling</h3>
+            <p>Responsive, Agile, Precise</p>
+        </div>
+        <div class="specs">
+            <h3>Fuel efficiency</h3>
+            <p>Moderate to Low</p>
+        </div>
+        <div class="specs">
+            <h3>Performance</h3>
+            <p>HighSpeed, Powerful engines</p>
+        </div>
+        <div class="specs">
+            <h3>Experience</h3>
+            <p>Thrilling, Exhilirating</p>
+        </div>
+    </div>
     
+    <hr>
+
+    <div class="showcase">
+        <div class="showcar">
+            <div class="showimg">
+                <img src="./pics/Sports/corvette.jpg" alt="Corvette pic" height="300px">
+            </div>
+            <div class="showdetails">
+                <p><span class="key">Brand:</span> Chevrolet</p>
+                <p><span class="key">Model:</span> Corvette</p>
+                <p><span class="key">Year:</span> 1953 - Present</p>
+                <p><span class="key">Engine:</span> Powerful V8</p>
+                <p><span class="key">Cost:</span> $60,000 to over $100,000</p>
+                <p><span class="key">Performance:</span> Impressive acceleration, top speed, and handling</p>
+            </div>
+        </div>
+
+        <p class="showdesc"> &emsp;&emsp;&emsp;&emsp; The Corvette, a legendary American icon, epitomizes performance and style with its sleek design and powerful V8 engine, offering a thrilling driving experience like no other. With its heritage of speed and innovation, the Corvette continues to captivate enthusiasts worldwide, embodying the spirit of automotive excellence.</p>
+
+    </div>
